--- a/out_98_08_08/drug_98_08_08.html
+++ b/out_98_08_08/drug_98_08_08.html
@@ -15,6 +15,47 @@
 <br>
 <table id="table" class="table table-striped table-bordered display nowrap" style="width:100%, font-family:'Courier New', Courier, monospace; font-size:250%" >
 <thead><tr><th>نماد</th><th>pe</th><th>گروهpe</th><th>بازار</th><th>tsm</th></tr></thead><tbody>
+<tr><td>دارو</td><td>9.81</td><td>13.02</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=67988012428906654">tsm</a></td></tr>
+<tr><td>دلقما</td><td>46.46</td><td>13.02</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=29247915161590165">tsm</a></td></tr>
+<tr><td>ددام</td><td>85.11</td><td>13.02</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=66450490505950110">tsm</a></td></tr>
+<tr><td>دروز</td><td>73.79</td><td>13.02</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=40262275031537922">tsm</a></td></tr>
+<tr><td>دجابر</td><td>12.54</td><td>13.02</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=33406621820337161">tsm</a></td></tr>
+<tr><td>هجرت</td><td>11.89</td><td>17.42</td><td>2</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=5317427172344706">tsm</a></td></tr>
+<tr><td>كاسپين</td><td>9.6</td><td>17.42</td><td>2</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=28431095903407567">tsm</a></td></tr>
+<tr><td>دسبحا</td><td>10.88</td><td>13.02</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=43622578471330344">tsm</a></td></tr>
+<tr><td>دشيمي</td><td>21.08</td><td>13.02</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=33603212156438463">tsm</a></td></tr>
+<tr><td>دسبحان</td><td>10.41</td><td>13.02</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=5866848234665627">tsm</a></td></tr>
+<tr><td>دسانكو</td><td>64.72</td><td>17.42</td><td>2</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=47348197320716810">tsm</a></td></tr>
+<tr><td>دزهراوي</td><td>-94.43</td><td>13.02</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=8915450910866216">tsm</a></td></tr>
+<tr><td>ديران</td><td>25.54</td><td>13.02</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=69090868458637360">tsm</a></td></tr>
+<tr><td>بركت</td><td>60.46</td><td>13.02</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=34557241988629814">tsm</a></td></tr>
+<tr><td>كي بي سي</td><td>16.98</td><td>17.42</td><td>2</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=62977319271289925">tsm</a></td></tr>
+<tr><td>دسينا</td><td>14.43</td><td>13.02</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=11432067920374603">tsm</a></td></tr>
+<tr><td>دتماد</td><td>13.25</td><td>13.02</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=34641719089573667">tsm</a></td></tr>
+<tr><td>دابور</td><td>10</td><td>13.02</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=61332057061846617">tsm</a></td></tr>
+<tr><td>دامين</td><td>10.28</td><td>13.02</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=50100062518826135">tsm</a></td></tr>
+<tr><td>درازك</td><td>10.89</td><td>13.02</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=22255783119783047">tsm</a></td></tr>
+<tr><td>پخش</td><td>15.03</td><td>17.42</td><td>2</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=12638840758449459">tsm</a></td></tr>
+<tr><td>دكپسول</td><td>15.97</td><td>17.42</td><td>2</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=52382684379473036">tsm</a></td></tr>
+<tr><td>دكيمي</td><td>9.33</td><td>13.02</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=20024911381434086">tsm</a></td></tr>
+<tr><td>دپارس</td><td>9.92</td><td>13.02</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=70474983732269112">tsm</a></td></tr>
+<tr><td>شفا</td><td>11.18</td><td>13.02</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=36899214178084525">tsm</a></td></tr>
+<tr><td>درهآور</td><td>36.63</td><td>17.42</td><td>2</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=13243992182070788">tsm</a></td></tr>
+<tr><td>دبالك</td><td>27.33</td><td>17.42</td><td>2</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=71510396252618330">tsm</a></td></tr>
+<tr><td>والبر</td><td>9</td><td>13.02</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=57944184894703821">tsm</a></td></tr>
+<tr><td>دفرا</td><td>10.07</td><td>13.02</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=18303237082155264">tsm</a></td></tr>
+<tr><td>دتوليد</td><td>28.91</td><td>17.42</td><td>2</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=18093681647131179">tsm</a></td></tr>
+<tr><td>دكوثر</td><td>17.89</td><td>13.02</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=23353689102956991">tsm</a></td></tr>
+<tr><td>دالبر</td><td>12.06</td><td>13.02</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=60451823714332895">tsm</a></td></tr>
+<tr><td>دعبيد</td><td>42.42</td><td>13.02</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=49054891736433700">tsm</a></td></tr>
+<tr><td>وپخش</td><td>11.19</td><td>13.02</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=7183333492448248">tsm</a></td></tr>
+<tr><td>ريشمك</td><td>19.18</td><td>17.42</td><td>2</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=6478064539164167">tsm</a></td></tr>
+<tr><td>دلر</td><td>8.43</td><td>13.02</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=4384288570322406">tsm</a></td></tr>
+<tr><td>دفارا</td><td>6.31</td><td>13.02</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=56550776668133562">tsm</a></td></tr>
+<tr><td>داوه</td><td>40.77</td><td>17.42</td><td>2</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=5305844922895340">tsm</a></td></tr>
+<tr><td>داسوه</td><td>10.77</td><td>13.02</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=12387472624849835">tsm</a></td></tr>
+<tr><td>دتوزيع</td><td>19.1</td><td>17.42</td><td>2</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=66726992874614788">tsm</a></td></tr>
+<tr><td>تيپيكو</td><td>8.81</td><td>13.02</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=29758477602878557">tsm</a></td></tr>
 
 </tbody>
 </table>
