--- a/out_98_08_13/drug_98_08_13.html
+++ b/out_98_08_13/drug_98_08_13.html
@@ -15,6 +15,47 @@
 <br>
 <table id="table" class="table table-striped table-bordered display nowrap" style="width:100%, font-family:'Courier New', Courier, monospace; font-size:250%" >
 <thead><tr><th>نماد</th><th>pe</th><th>گروهpe</th><th>بازار</th><th>tsm</th></tr></thead><tbody>
+<tr><td>دروز</td><td>82.13</td><td>13.38</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=40262275031537922">tsm</a></td></tr>
+<tr><td>دجابر</td><td>12.26</td><td>13.38</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=33406621820337161">tsm</a></td></tr>
+<tr><td>دلقما</td><td>45.44</td><td>13.38</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=29247915161590165">tsm</a></td></tr>
+<tr><td>كاسپين</td><td>9.97</td><td>17.92</td><td>2</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=28431095903407567">tsm</a></td></tr>
+<tr><td>ددام</td><td>89.73</td><td>13.38</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=66450490505950110">tsm</a></td></tr>
+<tr><td>دشيمي</td><td>24.02</td><td>13.38</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=33603212156438463">tsm</a></td></tr>
+<tr><td>دكپسول</td><td>16.14</td><td>17.92</td><td>2</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=52382684379473036">tsm</a></td></tr>
+<tr><td>دفرا</td><td>11.24</td><td>13.38</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=18303237082155264">tsm</a></td></tr>
+<tr><td>پخش</td><td>16.94</td><td>17.92</td><td>2</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=12638840758449459">tsm</a></td></tr>
+<tr><td>دابور</td><td>11.15</td><td>13.38</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=61332057061846617">tsm</a></td></tr>
+<tr><td>دسينا</td><td>15</td><td>13.38</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=11432067920374603">tsm</a></td></tr>
+<tr><td>دزهراوي</td><td>-104.75</td><td>13.38</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=8915450910866216">tsm</a></td></tr>
+<tr><td>كي بي سي</td><td>18.72</td><td>17.92</td><td>2</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=62977319271289925">tsm</a></td></tr>
+<tr><td>داوه</td><td>43.77</td><td>17.92</td><td>2</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=5305844922895340">tsm</a></td></tr>
+<tr><td>دتوليد</td><td>32.55</td><td>17.92</td><td>2</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=18093681647131179">tsm</a></td></tr>
+<tr><td>هجرت</td><td>11.02</td><td>17.92</td><td>2</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=5317427172344706">tsm</a></td></tr>
+<tr><td>داسوه</td><td>10.91</td><td>13.38</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=12387472624849835">tsm</a></td></tr>
+<tr><td>ديران</td><td>28.65</td><td>13.38</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=69090868458637360">tsm</a></td></tr>
+<tr><td>دتوزيع</td><td>18.24</td><td>17.92</td><td>2</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=66726992874614788">tsm</a></td></tr>
+<tr><td>دامين</td><td>9.83</td><td>13.38</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=50100062518826135">tsm</a></td></tr>
+<tr><td>ريشمك</td><td>19.29</td><td>17.92</td><td>2</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=6478064539164167">tsm</a></td></tr>
+<tr><td>درازك</td><td>11.66</td><td>13.38</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=22255783119783047">tsm</a></td></tr>
+<tr><td>دفارا</td><td>6.01</td><td>13.38</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=56550776668133562">tsm</a></td></tr>
+<tr><td>دتماد</td><td>14.62</td><td>13.38</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=34641719089573667">tsm</a></td></tr>
+<tr><td>بركت</td><td>69</td><td>13.38</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=34557241988629814">tsm</a></td></tr>
+<tr><td>دبالك</td><td>29.65</td><td>17.92</td><td>2</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=71510396252618330">tsm</a></td></tr>
+<tr><td>درهآور</td><td>41.62</td><td>17.92</td><td>2</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=13243992182070788">tsm</a></td></tr>
+<tr><td>دالبر</td><td>13.05</td><td>13.38</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=60451823714332895">tsm</a></td></tr>
+<tr><td>دسانكو</td><td>72.71</td><td>17.92</td><td>2</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=47348197320716810">tsm</a></td></tr>
+<tr><td>دپارس</td><td>9.65</td><td>13.38</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=70474983732269112">tsm</a></td></tr>
+<tr><td>دعبيد</td><td>40.95</td><td>13.38</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=49054891736433700">tsm</a></td></tr>
+<tr><td>دسبحان</td><td>11.1</td><td>13.38</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=5866848234665627">tsm</a></td></tr>
+<tr><td>وپخش</td><td>11.5</td><td>13.38</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=7183333492448248">tsm</a></td></tr>
+<tr><td>دكوثر</td><td>17.92</td><td>13.38</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=23353689102956991">tsm</a></td></tr>
+<tr><td>دلر</td><td>8.21</td><td>13.38</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=4384288570322406">tsm</a></td></tr>
+<tr><td>دارو</td><td>9.74</td><td>13.38</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=67988012428906654">tsm</a></td></tr>
+<tr><td>دسبحا</td><td>11.69</td><td>13.38</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=43622578471330344">tsm</a></td></tr>
+<tr><td>والبر</td><td>10.25</td><td>13.38</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=57944184894703821">tsm</a></td></tr>
+<tr><td>تيپيكو</td><td>8.59</td><td>13.38</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=29758477602878557">tsm</a></td></tr>
+<tr><td>شفا</td><td>10.8</td><td>13.38</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=36899214178084525">tsm</a></td></tr>
+<tr><td>دكيمي</td><td>9.2</td><td>13.38</td><td>1</td><td><a href="http://www.tsetmc.com/loader.aspx?ParTree=151311&i=20024911381434086">tsm</a></td></tr>
 
 </tbody>
 </table>
